# galactic_wavelets

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml  ci.yml
dev/consistency/: scattering_operator_legacy.py  simbig_consistency.ipynb  wst_consistency.ipynb
dev/misc/: impact_of_erosion.ipynb  wavelet_half_vs_full.ipynb
examples/: boss_statistics.ipynb  erosion_2d.ipynb  field_statistics.ipynb  simbig_statistics.ipynb  utils.py  wavelet_transform.ipynb
galactic_wavelets/: __init__.py  cosmology.py  erosion.py  reduction.py  scattering_operator.py  scattering_operator_legacy.py  utils.py  wavelet_transform.py  wavelets.py
tests/: simbig_consistency.ipynb  test_scattering_operator.py  test_wavelet_transform.py  wst_consistency.ipynb
