[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["galactic_wavelets"]

[project]
name = "galactic_wavelets"
version = "0.1"
description = "Wavelet Scattering Transform for 3D Cosmological Fields"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Bruno Régaldo-Saint Blancard", email = "bregaldo@flatironinstitute.org" }
]
dependencies = [
    "torch>=2.0",
    "numpy",
    "scipy",
    "matplotlib",
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
cosmo = [
    "cython",
    "mpi4py",
    "nbodykit[extras]>=0.3.15",
    "astropy",
]

[project.urls]
source = "https://github.com/bregaldo/galactic_wavelets"
